Failing test added

--- a/src/main/resources/locators.properties
+++ b/src/main/resources/locators.properties
@@ -7,9 +7,10 @@ EmployerInformation.primaryZip=id=primaryZip
 EmployerInformation.phone=id=phone
 EmployerInformation.email=id=email
 EmployerInformation.continue=css=.employer-title .btn-primary
-EmployerInformation.sicCodeButton=css=.employer-sic-code-button
+EmployerInformation.sicCodeButton=css=.employerSicCode a
 EmployerInformation.sicCodes=css=.sicCode-modal-search-block-codes-list li
 EmployerInformation.clearForm=css=.ihc-warning-wrapper
+EmployerInformation.validation=css=.text-danger
 #endregion
 
 #region Popups
